small mobile changes and lwjgl and joml version update